Added GitHub button to project section and updated description of experience

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 testing of core mission applications, enhancing capabilities integral to the warfighter's ability to execute 
                 command, control, intelligence, surveillance, and reconnaissance activities globally.</li>
                 <li>Contributed to the software development lifecycle through rigorous testing and integration of mission planner and command and control software for sensors, ensuring seamless functionality and identifying areas for improvement.</li>
-                <li>Collaborated with development teams to troubleshoot and resolve complex technical issues, leveraging analytical skills to drive efficient solutions.</li>
-                <li>Developed and implemented integration strategies, resulting in 100% deployment success and a 30% reduction in troubleshooting time. </li>
-                <li>Conducted thorough analysis and debugging, identifying and reporting software bugs, system compatibility issues, and other technical problems to development teams.</li>
-                <li>Demonstrated strong technical leadership, leading installs, demos, and site visits, and ensuring effective communication between technical teams and stakeholders.</li>
+                <li>Verified software integration and functionality by configuring XML files to point to updated databases, IP settings, and service virtual machines, successfully configured for testing.</li>
+                <li>Automated installation processes by modifying and maintaining Bash scripts to accommodate software version upgrades, reducing troubleshooting and integration by 40%. </li>
+                <li>Implemented new features and bug fixes using Java, enhancing mission-critical software capabilities for global deployment to Air Force personnel.</li>
+                <li>Improved deployment efficiency by collaborating with development teams, test engineers, program office, system administrators, and database engineers, leveraging technical expertise.</li>
             </ul>
             <h4> 402d Software Engineering Group (SWEG), Robins Air Force Base</h4>
             <h4>Software Engineer Intern</h4>
@@ -66,6 +66,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <h4>Cinema Booking Site</h4>
+            <a href="https://github.com/Eightoo/TeamC1" target="_blank" class="github-button">View on GitHub</a>
             <u1>
                 <li>Designed and developed a website for booking movie tickets using Node.js, HTML, CSS, and SQL.</li>
                 <li>Implemented user authentication and authorization for secure booking.</li>
