--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   <section id="experience" class="section">
     <div class="container">
       <h2>Experience</h2>
-      <h4>402d Software Engineering Group (SWEG), Robins Air Force Base</h4>
-      <h5>Software Engineer</h5>
+      <h4>402d Software Engineering Group (SWEG)</h4>
+      <h5>Software Engineer - Robins Air Force</h5>
       <ul>
         <li>
           Directly support the Air Force's $59.5M Distributed Common Ground
@@ -109,7 +109,7 @@
         </li>
       </ul>
 
-      <h4>Software Engineer Intern</h4>
+      <h5>Software Engineer Intern - Robins Air Force</h5>
       <ul>
         <li>
           Designed and developed a cutting-edge web application utilizing a
@@ -158,17 +158,43 @@
         >
         <ul>
           <li>Designed and developed a website for booking movie tickets using Node.js, HTML, CSS, and SQL.</li>
-          <li>Implemented user authentication and authorization for secure booking.</li>
-          <li>Developed a payment gateway integration for seamless transactions.</li>
+          <li>Developed backend logic for secure user authentication, including email validation during account creation to prevent unauthorized access.</li>
+          <li>Implemented password encryption using hashing algorithms to securely store user credentials in the database.</li>
+          <li>Designed and integrated a simulated payment processing system to handle movie ticket transactions with data integrity and error handling.</li>
         </ul>
       </div>
 
       <div class="project">
-        <h3>Poké-Dex Application</h3>
+        <h3>CourtFinder</h3>
+        <a
+          href="https://eightoo.github.io/courtFinder/"
+          target="_blank"
+          class="github-btn"
+          ><svg
+            class="github-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            fill="currentColor"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38
+      0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52
+      -.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64
+      -.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82a7.62 7.62
+      0 012 0c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87
+      3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016
+      8c0-4.42-3.58-8-8-8z"
+            />
+          </svg>
+          View on GitHub</a
+        >
         <ul>
-          <li>Developed a Java-based application that fetches Pokémon data and the average price of the card.</li>
-          <li>Utilized APIs to retrieve data and implemented data caching for improved performance.</li>
-          <li>Designed a user-friendly interface for easy navigation and search functionality.</li>
+          <li>Developed a responsive, mobile-friendly web application that helps users locate pickleball courts by city using Google Maps and Places APIs.</li>
+          <li>Integrated map markers for all search results and implemented Google Autocomplete to enhance search experience.</li>
+          <li>Implemented keyboard support for form submission and loading indicators for a seamless user experience.</li>
+          <li>Leveraged geocoding and place search APIs to ensure compatibility with any city across the United States.</li>
         </ul>
       </div>
     </div>
