Updated resume with aubreyBot and removed courtFinder

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
       </div>
 
       <div class="project">
-        <h3>CourtFinder</h3>
+        <h3>AubreyBot - Python Discord Bot</h3>
         <a
-          href="https://eightoo.github.io/courtFinder/"
+          href="https://github.com/Eightoo/aubreyBot/tree/main"
           target="_blank"
           class="github-btn"
           ><svg
@@ -191,10 +191,10 @@
           View on GitHub</a
         >
         <ul>
-          <li>Developed a responsive, mobile-friendly web application that helps users locate pickleball courts by city using Google Maps and Places APIs.</li>
-          <li>Integrated map markers for all search results and implemented Google Autocomplete to enhance search experience.</li>
-          <li>Implemented keyboard support for form submission and loading indicators for a seamless user experience.</li>
-          <li>Leveraged geocoding and place search APIs to ensure compatibility with any city across the United States.</li>
+          <li>Multi-command system using discord.py with modular cogs.</li>
+          <li>Organized project using cogs for scalability and maintainability.</li>
+          <li>Quote storage system with random retrieval.</li>
+          <li>AI-powered chatbot for interactive conversations.</li>
         </ul>
       </div>
     </div>
